# shop_bot

./: .gitignore  db.sqlite3  handlers.py  keyboards.py  main.py  pyproject.toml
app/: handlers.py  keyboards.py
database/: models.py  requests.py
