[tool.poetry]
name = "waka-bot"
version = "0.1.0"
description = ""
authors = ["arybzhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
aiogram = "^3.24.0"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.46"
aiosqlite = "^0.22.1"
greenlet = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
